# llm-accelerated-data-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: cobblestone_pitch.md
examples/: platform_smoke_test.py
sample_data/: boe_monetary_policy_excerpt.txt
src/llm_data_pipeline/: __init__.py  cli.py  extractor.py  schemas.py
tests/: test_dataframe.py
