[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-accelerated-data-pipeline"
version = "0.1.0"
description = "Extract central bank policy signals from raw text with the OpenAI API and Pandas."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.0.0",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
llm-data-pipeline = "llm_data_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
